--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <base target="_top">
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Bird CarCare Register</title>
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 <body>
-    <iframe style="width: 100%; height: 100vh;" scrolling="yes" src="https://script.google.com/macros/s/AKfycbyUj_iKVOAzGCCB4LilahJ2xZjlKvPQI1bB-F083-B8hkl1IYq_EovLKUAaps9uQCtQaw/exec" frameborder="0"></iframe>
+    <h1>Bird CarCare - สมัครสมาชิก</h1>
+    <p id="profile"></p>
+    <button id="registerBtn">ลงทะเบียน</button>
+
+    <script src="script.js"></script>
 </body>
 </html>
