--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <meta charset="UTF-8">
+    <title>สมัครสมาชิก Bird Car Care</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-  <div class="container">
-    <h2 class="title">สมัครสมาชิก Bird Car Care</h2>
-    <form id="registerForm">
-      <input type="text" id="userId" value="" readonly>
-      <input type="tel" id="phone" placeholder="เบอร์โทร" required>
-      <input type="text" id="name" placeholder="ชื่อ" required>
-      <input type="text" id="brand" placeholder="ยี่ห้อ" required>
-      <input type="text" id="model" placeholder="รุ่น" required>
-      <input type="text" id="year" placeholder="ปี" required>
-      <button type="submit">สมัครสมาชิก</button>
-    </form>
-  </div>
-  <script src="all_Car_Model.js"></script>
-  <script src="script.js"></script> <!-- แก้ตรงนี้ -->
+    <div class="form-container">
+        <h2>สมัครสมาชิก Bird Car Care</h2>
+        <form id="registerForm">
+            <input type="text" id="userId" readonly>
+            <input type="tel" id="phone" placeholder="เบอร์โทรศัพท์" required>
+            <input type="text" id="name" placeholder="ชื่อ" required>
+            <input list="brandList" id="brand" placeholder="ยี่ห้อ" required>
+            <datalist id="brandList"></datalist>
+            <input list="modelList" id="model" placeholder="รุ่น" required>
+            <datalist id="modelList"></datalist>
+            <input list="yearList" id="year" placeholder="ปี" required>
+            <datalist id="yearList"></datalist>
+            <button type="submit">สมัครสมาชิก</button>
+        </form>
+    </div>
+
+    <script src="all_car_model.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
