--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8">
-    <title>สมัครสมาชิก Bird Car Care</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <meta charset="UTF-8">
+  <title>สมัครสมาชิก Bird Car Care</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- responsive :contentReference[oaicite:5]{index=5} -->
+  <link rel="stylesheet" href="style.css">
+  <!-- LIFF SDK -->
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <!-- SweetAlert2 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <div class="form-container">
-        <h2>สมัครสมาชิก 🚗 Bird Car Care</h2>
-        <form id="registerForm">
-            <input type="text" id="userId" readonly>
-            <input type="tel" id="phone" placeholder="📞 เบอร์โทรศัพท์" required>
-            <input type="text" id="name" placeholder="👤 ชื่อ" required>
-            <input list="brandList" id="brand" placeholder="🏷️ ยี่ห้อ" required>
-            <datalist id="brandList"></datalist>
-            <input list="modelList" id="model" placeholder="🚘 รุ่น" required>
-            <datalist id="modelList"></datalist>
-            <input list="yearList" id="year" placeholder="📅 ปี" required>
-            <datalist id="yearList"></datalist>
-            <button type="submit">✅ สมัครสมาชิก</button>
-        </form>
-    </div>
-    <script src="car_data.js"></script>
-    <script src="script.js"></script>
+  <div class="container">
+    <h1>✨ สมัครสมาชิก Bird Car Care 🎉</h1>
+    <form id="registerForm">
+      <!-- UserID (ได้จาก LIFF) -->
+      <input type="hidden" id="userId" name="userId">
+      <!-- Phone -->
+      <input type="tel" id="phone" name="phone" placeholder="เบอร์โทรศัพท์ (10 หลัก)" maxlength="10" required>
+      <!-- Name -->
+      <input type="text" id="name" name="name" placeholder="ชื่อ-นามสกุล" required>
+      <!-- Brand with datalist -->
+      <input list="brandList" id="brand" name="brand" placeholder="ยี่ห้อ" required>
+      <datalist id="brandList"></datalist>
+      <!-- Model with datalist -->
+      <input list="modelList" id="model" name="model" placeholder="รุ่น" required>
+      <datalist id="modelList"></datalist>
+      <!-- Year with datalist -->
+      <input list="yearList" id="year" name="year" placeholder="ปี" required>
+      <datalist id="yearList"></datalist>
+      <button type="submit" id="submitBtn">สมัครสมาชิก</button>
+    </form>
+  </div>
+  <script src="car_data.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
