--- a/index.html
+++ b/index.html
@@ -1,52 +1,45 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive meta tag:contentReference[oaicite:4]{index=4} -->
-    <title>สมัครสมาชิก Bird Car Care</title>
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>สมัครสมาชิก Bird Car Care</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- UI Stylesheet -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Include SweetAlert2 for popups -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- Include LINE LIFF SDK (for getting userId and closing LIFF) -->
+  <script src="https://static.line-scdn.net/liff/edge/2.1/liff.js"></script>
+  <!-- Include car data (do not modify this file) -->
+  <script src="all_car_model.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1>สมัครสมาชิก Bird Car Care</h1>
-        <p>โปรดกรอกข้อมูลของท่านด้านล่าง</p>
-        <!-- Registration Form -->
-        <form id="regForm">
-            <label for="userId">LINE User ID</label>
-            <input type="text" id="userId" name="userId" readonly>
+  <div class="register-card">
+    <h1>สมัครสมาชิก Bird Car Care</h1>
+    <form id="registerForm">
+      <!-- Hidden field for userId (filled via LIFF) -->
+      <input type="hidden" id="userId" name="userId" value="">
+      <!-- Phone number -->
+      <input type="tel" id="phone" name="phone" placeholder="เบอร์โทรศัพท์" required>
+      <!-- Name -->
+      <input type="text" id="name" name="name" placeholder="ชื่อ" required>
+      <!-- Car Brand with datalist -->
+      <input type="text" id="brand" name="brand" list="brandList" placeholder="ยี่ห้อรถ" required>
+      <datalist id="brandList"></datalist>
+      <!-- Car Model with datalist -->
+      <input type="text" id="model" name="model" list="modelList" placeholder="รุ่นรถ" disabled required>
+      <datalist id="modelList"></datalist>
+      <!-- Car Year with datalist -->
+      <input type="text" id="year" name="year" list="yearList" placeholder="ปีที่ผลิตรถ" required>
+      <datalist id="yearList"></datalist>
+      <!-- Submit button -->
+      <button type="submit" id="submitBtn">สมัครสมาชิก</button>
+    </form>
+  </div>
 
-            <label for="fullName">ชื่อ-นามสกุล</label>
-            <input type="text" id="fullName" name="fullName" placeholder="ชื่อ-นามสกุล">
-
-            <label for="phone">เบอร์โทรศัพท์</label>
-            <input type="tel" id="phone" name="phone" placeholder="0XXXXXXXXX">
-
-            <label for="brand">ยี่ห้อรถ</label>
-            <input list="brandList" id="brand" name="brand" placeholder="เลือกหรือพิมพ์ยี่ห้อรถ">
-            <datalist id="brandList"></datalist> <!-- Auto-suggest options populated by script:contentReference[oaicite:5]{index=5} -->
-
-            <label for="model">รุ่นรถ</label>
-            <input list="modelList" id="model" name="model" placeholder="เลือกรุ่นรถ" disabled>
-            <datalist id="modelList"></datalist>
-
-            <label for="year">ปีรถ</label>
-            <input list="yearList" id="year" name="year" placeholder="เลือกปีรถ" disabled>
-            <datalist id="yearList"></datalist>
-
-            <button type="button" id="submitBtn">สมัคร</button>
-        </form>
-    </div>
-
-    <!-- LIFF SDK v2 -->
-    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-    <!-- SweetAlert2 for alerts -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- Car brand/model/year data -->
-    <script src="all_car_model.js"></script>
-    <!-- Main script -->
-    <script src="script.js"></script>
+  <!-- Application logic -->
+  <script src="script.js"></script>
 </body>
 </html>
