--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <h1>สมัครสมาชิก Bird Car Care</h1>
     <form id="registerForm">
       <!-- Hidden field for userId (filled via LIFF) -->
-      <input type="hidden" id="userId" name="userId" value="">
+       <!-- <input type="hidden" id="userId" name="userId" value=""> -->
+      <input type="text" id="userId" readonly>
       <!-- Phone number -->
       <input type="tel" id="phone" name="phone" placeholder="เบอร์โทรศัพท์" required>
       <!-- Name -->
