--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <input list="yearList" id="year" name="year" placeholder="เลือกปี">
                 <datalist id="yearList"></datalist>
             </div>
+            <input type="hidden" id="category">
             <button type="submit">สมัครสมาชิก</button>
         </form>
     </div>
-    <!-- เชื่อมต่อไฟล์ข้อมูลและสคริปต์หลัก -->
     <script src="all_car_model.js"></script>
     <script src="script.js"></script>
 </body>
