--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
             <div class="form-group">
                 <label for="brand">ยี่ห้อ:</label>
                 <input list="brandList" id="brand" name="brand" placeholder="เลือกยี่ห้อ">
-                <datalist id="brandList">
-                    <option value="Audi">
-                    <option value="Yamaha">
-                    <option value="Vespa">
-                    <option value="Triumph">
-                </datalist>
+                <datalist id="brandList"></datalist>
             </div>
             <div class="form-group">
                 <label for="model">รุ่น:</label>
