--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
             </div>
             <div class="form-group">
                 <label for="name">ชื่อ:</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="name" name="name" required>
             </div>
             <div class="form-group">
                 <label for="phone">เบอร์โทร:</label>
-                <input type="tel" id="phone" name="phone" placeholder="0812345678">
+                <input type="tel" id="phone" name="phone" placeholder="0812345678" required>
             </div>
             <div class="form-group">
                 <label for="brand">ยี่ห้อ:</label>
-                <input list="brandList" id="brand" name="brand" placeholder="เลือกยี่ห้อ">
+                <input list="brandList" id="brand" name="brand" placeholder="เลือกหรือพิมพ์ยี่ห้อ" required>
                 <datalist id="brandList"></datalist>
             </div>
             <div class="form-group">
                 <label for="model">รุ่น:</label>
-                <input list="modelList" id="model" name="model" placeholder="เลือกหรือพิมพ์รุ่น">
+                <input list="modelList" id="model" name="model" placeholder="เลือกหรือพิมพ์รุ่น" required>
                 <datalist id="modelList"></datalist>
             </div>
             <div class="form-group">
                 <label for="year">ปี:</label>
-                <input list="yearList" id="year" name="year" placeholder="เลือกปี">
+                <input list="yearList" id="year" name="year" placeholder="เลือกหรือพิมพ์ปี" required>
                 <datalist id="yearList"></datalist>
             </div>
             <input type="hidden" id="category">
