--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button type="submit">สมัครสมาชิก</button>
         </form>
     </div>
-    <script src="all_car_model.js"></script>
+    <script src="all_car_model.js" onerror="alert('ไม่สามารถโหลดข้อมูลยี่ห้อรถได้ กรุณาลองใหม่หรือติดต่อ Admin')"></script>
     <script src="script.js"></script>
 </body>
 </html>
