--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>สมัครสมาชิก</title>
     <link rel="stylesheet" href="style.css">
     <!-- LIFF SDK -->
-    <script src="https://static.line-scdn.net/liff/edge/2.3/sdk.js"></script>
+    <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
