--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <datalist id="yearList"></datalist>
             </div>
             <input type="hidden" id="category">
-            <button type="submit">สมัครสมาชิก</button>
+            <button id="submitBtn" type="submit">สมัครสมาชิก</button>
         </form>
     </div>
     <script src="all_car_model.js" onerror="alert('ไม่สามารถโหลดข้อมูลยี่ห้อรถได้ กรุณาลองใหม่หรือติดต่อ Admin')"></script>
