--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <h2>สมัครสมาชิก</h2>
-        <form id="registerForm">
+        <form id="registrationForm">
             <div class="form-group">
                 <label for="userId">User ID (LINE):</label>
                 <input type="text" id="userId" name="userId" readonly>
