--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <datalist id="yearList"></datalist>
             </div>
             <input type="hidden" id="category">
+            <input type="hidden" id="channel" value="LINE">
             <button id="submitBtn" type="submit">สมัครสมาชิก</button>
         </form>
     </div>
