--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <form id="registrationForm">
             <div class="form-group">
                 <label for="userId">User ID (LINE):</label>
-                <input type="text" id="userId" name="userId" readonly>
+                <input type="text" id="userId" name="userId" readonly style="pointer-events: none;">
             </div>
             <div class="form-group">
                 <label for="name">ชื่อ:</label>
