--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="th">
 <head>
     <meta charset="UTF-8">
@@ -43,6 +44,7 @@
             <input type="hidden" id="category">
             <input type="hidden" id="channel" value="LINE">
             <button id="submitBtn" type="submit">สมัครสมาชิก</button>
+            <div id="statusMessage" style="text-align:center; color:green; font-weight:bold;"></div>
         </form>
     </div>
     <script src="all_car_model.js" onerror="alert('ไม่สามารถโหลดข้อมูลยี่ห้อรถได้ กรุณาลองใหม่หรือติดต่อ Admin')"></script>
